syntax = "proto3";

package linebot;

service LineBot {
    rpc NotifyMessage (NotifyMessageRequest) returns (NotifyMessageResponse) {}
}

message NotifyMessageRequest {
    repeated string to = 1;
    string text = 2;
    repeated string imageUrls = 3;
    repeated string videoUrls = 4;
}

message NotifyMessageResponse {
}
